[package]
name = "neonbulker"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[lib]
name = "neonbulker"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
neon-serde = "0.3.0"
curl = "0.4.25"
json = "0.12.1"
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
sodiumoxide = "0.2.5"
libsodium-sys = "0.2.5"
zstd = "0.4"
serde_json = "1.0.61"
oauth2 = "3.0"
url = "2.2.0"
open = "1.4.0"
